fixed radio buttons on iphone/ipad

--- a/app/assets/stylesheets/applications.scss
+++ b/app/assets/stylesheets/applications.scss
@@ -161,3 +161,12 @@ a.btn.btn-danger.right-link {
     padding-right: 10px;
   }
 }
+
+/***** max 768 width Styles ******/
+
+@media (max-width: 768px) {
+  input[type="radio"] {
+      width: 13px !important;
+      margin-top: -6px;
+  }
+}
